[project]
name = "ComfyUI-API-Manager"
description = "A LLM API key management solution for ComfyUI with automatic load balancing support."
version = "0.0.1"
license = {file = "LICENSE"}

dependencies = [""]
    
[project.urls]
Repository = "https://github.com/1038lab/ComfyUI-API-Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ailab"
DisplayName = "ComfyUI-API-Manager"

Icon = ""
